@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-10T01:03:17Z",
+  "timestamp" : "2022-12-10T08:16:21Z",
   "count_outdated" : 710,
   "uniques_outdated" : 400,
-  "count" : 729,
-  "uniques" : 408,
+  "count" : 730,
+  "uniques" : 409,
   "clones" : [
     {
       "timestamp": "2022-11-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -51,6 +51,13 @@
       "timestamp": "2022-12-09T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
